--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -15,21 +15,33 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:orientation="horizontal" >
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/live_feed_profile_pic"
-                android:layout_width="30dp"
-                android:layout_height="30dp" />
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="10dp"/>
 
             <TextView
                 android:id="@+id/live_feed_post_username"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:text="@string/username" />
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/username"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold" />
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#c0c0c0"
+            android:layout_marginBottom="5dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,18 +54,18 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/black"
+                android:background="#c0c0c0"
                 android:scaleType="center"
-                android:src="@drawable/ic_launcher_foreground" />
+                android:src="@drawable/ic_image" />
 
             <ImageView
                 android:id="@+id/live_feed_image2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/design_default_color_primary_dark"
+                android:background="#c0c0c0"
                 android:scaleType="center"
-                android:src="@drawable/ic_launcher_foreground" />
+                android:src="@drawable/ic_image" />
 
         </LinearLayout>
 
@@ -68,41 +80,59 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/design_default_color_primary"
+                android:background="#c0c0c0"
                 android:scaleType="center"
-                android:src="@drawable/ic_launcher_foreground" />
+                android:src="@drawable/ic_image" />
 
             <ImageView
                 android:id="@+id/live_feed_image4"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/cardview_light_background"
+                android:background="#c0c0c0"
                 android:scaleType="center"
-                android:src="@drawable/ic_launcher_foreground" />
+                android:src="@drawable/ic_image" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/live_feed_post_caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Caption" />
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="10dp"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:text="@string/caption" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#c0c0c0"
+            android:layout_marginBottom="5dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
             android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_launcher_foreground"/>
+                android:layout_marginBottom="20dp"
+                android:layout_marginStart="10dp"
+                android:src="@drawable/ic_comment"/>
 
             <TextView
                 android:id="@+id/live_feed_num_comments"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginStart="5dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="20sp"
                 android:text="0" />
 
         </LinearLayout>
