made some design changes, added username and profile pictures to live feed. Again, kinda buggy.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="20dp"
         android:text="Login"
+        android:backgroundTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enterPassword" />
@@ -44,6 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:text="Username"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/enterUsername"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.288"
@@ -55,6 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:text="Password"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/enterPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.289"
@@ -83,6 +86,9 @@
         android:fontFamily="sans-serif-light"
         android:text="Forgot Password?"
         android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -95,7 +101,9 @@
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif-light"
         android:text="Tap here to create an account"
+        android:textColor="@color/black"
         android:textAllCaps="false"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -105,12 +113,11 @@
         android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:text="Let's Post!"
+        android:layout_marginTop="60dp"
+        android:text="Login"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-        android:textColor="#3F51B5"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
