--- a/app/src/main/res/layout/fragment_first_create_account.xml
+++ b/app/src/main/res/layout/fragment_first_create_account.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="20dp"
         android:text="Create Account"
         android:textAlignment="center"
-        android:textColor="#3F51B5"
+        android:textColor="@color/black"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -31,6 +31,7 @@
         android:layout_marginTop="52dp"
         android:layout_marginEnd="49dp"
         android:text="Email"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,6 +57,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="49dp"
         android:text="@string/password"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,6 +83,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="49dp"
         android:text="@string/confirm_password"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -104,6 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="@string/register"
+        android:backgroundTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
