--- a/app/src/main/res/layout/fragment_second_create_account.xml
+++ b/app/src/main/res/layout/fragment_second_create_account.xml
@@ -78,6 +78,7 @@
         android:fontFamily="sans-serif-light"
         android:text="Edit Profile Picture"
         android:textAllCaps="false"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/create_account_circle_image" />
@@ -88,6 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Register"
+        android:backgroundTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
