--- a/app/src/main/res/layout/fragment_second_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_second_forgot_password.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="88dp"
         android:text="Enter Your New Password"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-        android:textColor="#3F51B5"
+        android:textColor="@color/black"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Password"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/forgot_password_enter_new_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.053"
@@ -45,6 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Confirm Password"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/forgot_password_confirm_new_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.057"
@@ -65,7 +67,8 @@
         android:id="@+id/forgot_password_confirm_button"
         android:layout_width="159dp"
         android:layout_height="55dp"
-        android:layout_marginBottom="156dp"
+        android:layout_marginBottom="248dp"
+        android:backgroundTint="@color/black"
         android:text="Confirm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
