--- a/app/src/main/res/layout/fragment_second_create_account.xml
+++ b/app/src/main/res/layout/fragment_second_create_account.xml
@@ -62,7 +62,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="48dp"
-        android:src="@drawable/ic_account_circle"
+        android:src="@mipmap/ic_blank_profile_pic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,6 +77,7 @@
         android:text="Edit Profile Picture"
         android:textAllCaps="false"
         android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/create_account_circle_image" />
