clicking on a post image will no open a larger view of the image with a like button and the number of likes it has gotten.

--- a/app/src/main/res/layout/activity_view_comments.xml
+++ b/app/src/main/res/layout/activity_view_comments.xml
@@ -94,6 +94,7 @@
             android:id="@+id/comment_et"
             android:layout_width="280dp"
             android:layout_height="match_parent"
+            android:hint="Enter your comment"
             android:layout_marginStart="10dp"/>
 
         <ImageView
