--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:cardView="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
     android:layout_marginStart="10dp"
@@ -14,7 +14,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:orientation="vertical">
@@ -50,59 +50,10 @@
             android:background="#c0c0c0"
             android:layout_marginBottom="5dp" />
 
-        <LinearLayout
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/live_feed_vp"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/live_feed_image1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#c0c0c0"
-                android:scaleType="center"
-                android:src="@drawable/ic_image" />
-
-            <ImageView
-                android:id="@+id/live_feed_image2"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#c0c0c0"
-                android:scaleType="center"
-                android:src="@drawable/ic_image" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/post_item_images_ll"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/live_feed_image3"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#c0c0c0"
-                android:scaleType="center"
-                android:visibility="gone"
-                android:src="@drawable/ic_image" />
-
-            <ImageView
-                android:id="@+id/live_feed_image4"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#c0c0c0"
-                android:scaleType="center"
-                android:visibility="gone"
-                android:src="@drawable/ic_image" />
-        </LinearLayout>
+            android:layout_height="300dp" />
 
         <TextView
             android:id="@+id/live_feed_post_caption"
