--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -6,15 +6,49 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
+        android:backgroundTint="@color/black"
         android:layout_centerInParent="true"
         android:layout_margin="10dp">
 
         <ImageView
             android:id="@+id/image_pager_iv"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="fitXY" />
+            android:layout_height="match_parent"
+            android:scaleType="fitCenter" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/live_feed_like_container"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_gravity="bottom"
+            android:background="@color/white">
+
+            <ImageView
+                android:id="@+id/live_feed_like_iv"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="5dp"
+                android:src="@drawable/ic_like_border"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/live_feed_num_likes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="5dp"
+                android:text="0"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/live_feed_like_iv"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
